# 887Assistant

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  handoff.md  pyproject.toml  railway.toml  requirements.txt
app/: __init__.py  config.py  logging_config.py  main.py
app/bot/: callbacks.py  errors.py  keyboards.py  menu.py  message_tracking.py  runtime.py
app/db/: base.py  models.py  repository.py
app/modules/ai/: handlers.py  providers.py  service.py  web_search.py
app/modules/calendar/: handlers.py  ics.py  reminders.py  service.py
app/modules/faceit/: cache.py  charset.py  client.py  handlers.py  service.py
app/modules/files/: handlers.py  service.py
app/storage/: __init__.py  base.py  local.py  s3.py
app/web/: server.py
tests/: conftest.py  test_ai.py  test_calendar.py  test_faceit.py  test_files.py  test_message_tracking.py  test_smoke.py  test_storage.py  test_web_search.py
