[project]
name = "887assistant"
version = "0.1.0"
description = "Multi-tool Telegram bot: file storage, calendar, AI chat (Kimi), FACEIT nickname checker."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-q"
